--- a/assets/bibliography/2024-05-07-the-n-implementation-details-of-rlhf-with-ppo.bib
+++ b/assets/bibliography/2024-05-07-the-n-implementation-details-of-rlhf-with-ppo.bib
@@ -49,3 +49,12 @@
   year      = {2015},
   address   = {San Diega, CA, USA},
 }
+
+@article{stiennon2020learning,
+  title={Learning to summarize with human feedback},
+  author={Stiennon, Nisan and Ouyang, Long and Wu, Jeffrey and Ziegler, Daniel and Lowe, Ryan and Voss, Chelsea and Radford, Alec and Amodei, Dario and Christiano, Paul F},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={3008--3021},
+  year={2020}
+}
