--- a/assets/bibliography/2024-05-07-double-descent-demystified.bib
+++ b/assets/bibliography/2024-05-07-double-descent-demystified.bib
@@ -116,6 +116,92 @@
 }
 
 
+@article{biggio2012poisoning,
+  title={Poisoning attacks against support vector machines},
+  author={Biggio, Battista and Nelson, Blaine and Laskov, Pavel},
+  journal={arXiv preprint arXiv:1206.6389},
+  year={2012}
+}
+
+@inproceedings{carlini2021poisoning,
+  title={Poisoning the unlabeled dataset of $\{$Semi-Supervised$\}$ learning},
+  author={Carlini, Nicholas},
+  booktitle={30th USENIX Security Symposium (USENIX Security 21)},
+  pages={1577--1592},
+  year={2021}
+}
+
+@article{chen2017targeted,
+  title={Targeted backdoor attacks on deep learning systems using data poisoning},
+  author={Chen, Xinyun and Liu, Chang and Li, Bo and Lu, Kimberly and Song, Dawn},
+  journal={arXiv preprint arXiv:1712.05526},
+  year={2017}
+}
+
+@article{gu2017badnets,
+  title={Badnets: Identifying vulnerabilities in the machine learning model supply chain},
+  author={Gu, Tianyu and Dolan-Gavitt, Brendan and Garg, Siddharth},
+  journal={arXiv preprint arXiv:1708.06733},
+  year={2017}
+}
+
+@inproceedings{schuster2021you,
+  title={You autocomplete me: Poisoning vulnerabilities in neural code completion},
+  author={Schuster, Roei and Song, Congzheng and Tromer, Eran and Shmatikov, Vitaly},
+  booktitle={30th USENIX Security Symposium (USENIX Security 21)},
+  pages={1559--1575},
+  year={2021}
+}
+
+@article{wallace2020concealed,
+  title={Concealed data poisoning attacks on NLP models},
+  author={Wallace, Eric and Zhao, Tony Z and Feng, Shi and Singh, Sameer},
+  journal={arXiv preprint arXiv:2010.12563},
+  year={2020}
+}
+
+@incollection{kurakin2018adversarial,
+  title={Adversarial examples in the physical world},
+  author={Kurakin, Alexey and Goodfellow, Ian J and Bengio, Samy},
+  booktitle={Artificial intelligence safety and security},
+  pages={99--112},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
+}
+
+
+@article{szegedy2013intriguing,
+  title={Intriguing properties of neural networks},
+  author={Szegedy, Christian and Zaremba, Wojciech and Sutskever, Ilya and Bruna, Joan and Erhan, Dumitru and Goodfellow, Ian and Fergus, Rob},
+  journal={arXiv preprint arXiv:1312.6199},
+  year={2013}
+}
+
+
+@article{carlini2021contrastive,
+  title={Poisoning and backdooring contrastive learning},
+  author={Carlini, Nicholas and Terzis, Andreas},
+  journal={arXiv preprint arXiv:2106.09667},
+  year={2021}
+}
+
+@article{steinhardt2017certified,
+  title={Certified defenses for data poisoning attacks},
+  author={Steinhardt, Jacob and Koh, Pang Wei W and Liang, Percy S},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@inproceedings{athalye2018synthesizing,
+  title={Synthesizing robust adversarial examples},
+  author={Athalye, Anish and Engstrom, Logan and Ilyas, Andrew and Kwok, Kevin},
+  booktitle={International conference on machine learning},
+  pages={284--293},
+  year={2018},
+  organization={PMLR}
+}
+
 
 @article{rocks2022memorizing,
   title={Memorizing without overfitting: Bias, variance, and interpolation in overparameterized models},
