--- a/assets/bibliography/2024-05-07-distill-ALiBi-MLM.bib
+++ b/assets/bibliography/2024-05-07-distill-ALiBi-MLM.bib
@@ -14,6 +14,47 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{DBLP:conf/naacl/DevlinCLT19,
+  author       = {Jacob Devlin and
+                  Ming{-}Wei Chang and
+                  Kenton Lee and
+                  Kristina Toutanova},
+  editor       = {Jill Burstein and
+                  Christy Doran and
+                  Thamar Solorio},
+  title        = {BERT: Pre-training of Deep Bidirectional Transformers for Language
+                  Understanding},
+  booktitle    = {Proceedings of the 2019 Conference of the North American Chapter of
+                  the Association for Computational Linguistics: Human Language Technologies,
+                  {NAACL-HLT} 2019, Minneapolis, MN, USA, June 2-7, 2019, Volume 1 (Long
+                  and Short Papers)},
+  pages        = {4171--4186},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2019},
+  url          = {https://doi.org/10.18653/v1/n19-1423},
+  doi          = {10.18653/V1/N19-1423},
+  timestamp    = {Mon, 26 Sep 2022 12:21:55 +0200},
+  biburl       = {https://dblp.org/rec/conf/naacl/DevlinCLT19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{liu2019roberta,
+      title={RoBERTa: A Robustly Optimized BERT Pretraining Approach},
+      author={Yinhan Liu and Myle Ott and Naman Goyal and Jingfei Du and Mandar Joshi and Danqi Chen and Omer Levy and Mike Lewis and Luke Zettlemoyer and Veselin Stoyanov},
+      year={2019},
+      url={https://arxiv.org/abs/1907.11692},
+      eprint={1907.11692},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{ott2019fairseq,
+  title = {fairseq: A Fast, Extensible Toolkit for Sequence Modeling},
+  author = {Myle Ott and Sergey Edunov and Alexei Baevski and Angela Fan and Sam Gross and Nathan Ng and David Grangier and Michael Auli},
+  booktitle = {Proceedings of NAACL-HLT 2019: Demonstrations},
+  year = {2019},
+}
+
 @inproceedings{DBLP:conf/icml/RadfordKHRGASAM21,
   author       = {Alec Radford and
                   Jong Wook Kim and
