--- a/assets/bibliography/2024-05-07-robust-foundation-model.bib
+++ b/assets/bibliography/2024-05-07-robust-foundation-model.bib
@@ -121,3 +121,12 @@ booktitle={Thirty-seventh Conference on Neural Information Processing Systems},
 year={2023},
 url={https://openreview.net/forum?id=zuXyQsXVLF}
 }
+
+@article{pre,
+  title={Pre-trained Adversarial Perturbations},
+  author={Ban, Yuanhao and Dong, Yinpeng},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={1196--1209},
+  year={2022}
+}
