--- a/assets/bibliography/2024-05-07-diffusion-theory-from-scratch.bib
+++ b/assets/bibliography/2024-05-07-diffusion-theory-from-scratch.bib
@@ -117,3 +117,29 @@
   year={2011},
   publisher={MIT Press}
 }
+
+@inproceedings{
+  song2021scorebased,
+  title={Score-Based Generative Modeling through Stochastic Differential Equations},
+  author={Yang Song and Jascha Sohl-Dickstein and Diederik P Kingma and Abhishek Kumar and Stefano Ermon and Ben Poole},
+  booktitle={International Conference on Learning Representations},
+  year={2021},
+  url={https://openreview.net/forum?id=PxTIG12RRHS}
+}
+
+@incollection{robbins1992empirical,
+  title={An empirical Bayes approach to statistics},
+  author={Robbins, Herbert E},
+  booktitle={Breakthroughs in Statistics: Foundations and basic theory},
+  pages={388--394},
+  year={1992},
+  publisher={Springer}
+}
+
+@article{ANDERSON1982313,
+title = {Reverse-time diffusion equation models},
+journal = {Stochastic Processes and their Applications},
+volume = {12},
+year = {1982},
+author = {Brian D.O. Anderson}
+}
