--- a/assets/bibliography/2024-05-07-gradient-inversion-attack.bib
+++ b/assets/bibliography/2024-05-07-gradient-inversion-attack.bib
@@ -1,7 +1,42 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@inproceedings{wu2023learning,
+  title={Learning to invert: Simple adaptive attacks for gradient inversion in federated learning},
+  author={Wu, Ruihan and Chen, Xiangyu and Guo, Chuan and Weinberger, Kilian Q},
+  booktitle={Uncertainty in Artificial Intelligence},
+  pages={2293--2303},
+  year={2023},
+  organization={PMLR}
+}
+
+@inproceedings{yin2021see,
+  title={See through gradients: Image batch recovery via gradinversion},
+  author={Yin, Hongxu and Mallya, Arun and Vahdat, Arash and Alvarez, Jose M and Kautz, Jan and Molchanov, Pavlo},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={16337--16346},
+  year={2021}
+}
+
+@inproceedings{geiping2020inverting,
+  title={Inverting gradients-how easy is it to break privacy in federated learning?},
+  author={Geiping, Jonas and Bauermeister, Hartmut and Dr{\"o}ge, Hannah and Moeller, Michael},
+  booktitle={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={16937--16947},
+  year={2020}
+}
+
+@inproceedings{jeon2021gradient,
+  title={Gradient inversion with generative image prior},
+  author={Jeon, Jinwoo and Lee, Kangwook and Oh, Sewoong and Ok, Jungseul and others},
+  booktitle={Advances in neural information processing systems},
+  volume={34},
+  pages={29898--29908},
+  year={2021}
+}
+
+@inproceedings{fang2023gifd,
+  title={GIFD: A Generative Gradient Inversion Method with Feature Domain Optimization},
+  author={Fang, Hao and Chen, Bin and Wang, Xuan and Wang, Zhi and Xia, Shu-Tao},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={4967--4976},
+  year={2023}
 }
