--- a/assets/bibliography/2024-05-07-gradient-inversion-attack.bib
+++ b/assets/bibliography/2024-05-07-gradient-inversion-attack.bib
@@ -40,3 +40,12 @@
   pages={4967--4976},
   year={2023}
 }
+
+@inproceedings{anonymous2023towards,
+title={Towards Eliminating Hard Label Constraints in Gradient Inversion Attacks},
+author={Anonymous},
+booktitle={Submitted to The Twelfth International Conference on Learning Representations},
+year={2023},
+url={https://openreview.net/forum?id=s8cMuxI5gu},
+note={under review}
+}
