lowercase and no 'distill' in names

--- a/_posts/2024-05-07-alibi-mlm.md
+++ b/_posts/2024-05-07-alibi-mlm.md
@@ -10,7 +10,7 @@ authors:
   - name: Anonymous
 
 # must be the exact same name as your blogpost
-bibliography: 2024-05-07-distill-ALiBi-MLM.bib
+bibliography: 2024-05-07-alibi-mlm.bib
 
 # Add a table of contents to your post.
 #   - make sure that TOC names match the actual section names
@@ -31,7 +31,7 @@ toc:
 
 Unmodified and unmasked, attention mechanism is permutation-invariant and positional encoding is therefore employed by transformer-based language models to break the symmetry and enable sequence modeling. In their ICLR 2022 paper, Press et al. <d-cite key="DBLP:conf/iclr/PressSL22"></d-cite> introduced Attention with Linear Biases (ALiBi) as a new approach to positional encoding, where the positional info of the tokens are encoded by applying an attention weight bias proportional to the distance between tokens:
 
-{% include figure.html path="assets/img/2024-05-07-distill-ALiBi-MLM/ALiBi.jpeg" class="img-fluid" %}
+{% include figure.html path="assets/img/2024-05-07-alibi-mlm/ALiBi.jpeg" class="img-fluid" %}
 
 where $$m$$ is a head-specific slope chosen to follow geometric sequence $$\frac{1}{2^{0.5}}, \frac{1}{2^1}, \frac{1}{2^{1.5}}, \dots, \frac{1}{2^\frac{n}{2}}$$ for a model with $$n$$ attention heads. This approach is shown to enable input length extrapolation in the sense that perplexity of the model remains stable as the inference context length exceeds training context length. The paper, however, focuses on autoregressive decoder-only models and relies on model perplexity as the metric, therefore leaves the question open whether ALiBi is applicable to MLMs like BERT <d-cite key="DBLP:conf/naacl/DevlinCLT19"></d-cite> and RoBERTa <d-cite key="liu2019roberta"></d-cite>. To help answer this question, we tested the two following changes to the RoBERTa baseline models, based on the first-party Fairseq toolkit <d-cite key="ott2019fairseq"></d-cite>:
 
@@ -117,7 +117,7 @@ We removed the `embed_dim x embed_dim` fully-connected layer, activation functio
 ### WikiText-103
 At first we tested the changes with the [WikiText-103 dataset](https://www.salesforce.com/products/einstein/ai-research/the-wikitext-dependency-language-modeling-dataset/) <d-cite key="DBLP:conf/iclr/MerityX0S17"></d-cite> with a GeForce RTX 3080 16 GB Laptop GPU, using the validation set MLM perplexity as the metric. We tested the baseline, learned-clap (baseline + CLAP head), ALiBi (baseline + ALiBi), and zero-clap (baseline + CLAP head + ALiBi), in addition to baseline but with sinusoidal positional encoding:
 
-{% include figure.html path="assets/img/2024-05-07-distill-ALiBi-MLM/valid_ppl_cleaned.png" class="img-fluid" %}
+{% include figure.html path="assets/img/2024-05-07-alibi-mlm/valid_ppl_cleaned.png" class="img-fluid" %}
 
 where solid lines are what's considered "canonical" setup and dotted lines are experiments with the following variations in setup. These variations turned out to be irrelevant:
 
