fix citation bib

--- a/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
+++ b/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
@@ -1,3 +1,10 @@
+@article{xu2018powerful,
+  title={How powerful are graph neural networks?},
+  author={Xu, Keyulu and Hu, Weihua and Leskovec, Jure and Jegelka, Stefanie},
+  journal={arXiv preprint arXiv:1810.00826},
+  year={2018}
+}
+
 @article{souza2022provably,
   title={Provably expressive temporal graph networks},
   author={Souza, Amauri and Mesquita, Diego and Kaski, Samuel and Garg, Vikas},
@@ -5,6 +12,13 @@
   volume={35},
   pages={32257--32269},
   year={2022}
+}
+
+@article{longa2023graph,
+  title={Graph Neural Networks for temporal graphs: State of the art, open challenges, and opportunities},
+  author={Longa, Antonio and Lachi, Veronica and Santin, Gabriele and Bianchini, Monica and Lepri, Bruno and Lio, Pietro and Scarselli, Franco and Passerini, Andrea},
+  journal={arXiv preprint arXiv:2302.01018},
+  year={2023}
 }
 
 @article{jegelka2022theory,
@@ -62,13 +76,6 @@
   year={2017}
 }
 
-@article{xu2018powerful,
-  title={How powerful are graph neural networks?},
-  author={Xu, Keyulu and Hu, Weihua and Leskovec, Jure and Jegelka, Stefanie},
-  journal={arXiv preprint arXiv:1810.00826},
-  year={2018}
-}
-
 @article{kipf2016semi,
   title={Semi-supervised classification with graph convolutional networks},
   author={Kipf, Thomas N and Welling, Max},
@@ -78,7 +85,7 @@
 
 @article{velivckovic2017graph,
   title={Graph attention networks},
-  author={Veli{\v{c}}kovi{\'c}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Lio, Pietro and Bengio, Yoshua},
+  author={Velickovic, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Lio, Pietro and Bengio, Yoshua},
   journal={arXiv preprint arXiv:1710.10903},
   year={2017}
 }
@@ -93,7 +100,7 @@
 
 @article{velivckovic2022message,
   title={Message passing all the way up},
-  author={Veli{\v{c}}kovi{\'c}, Petar},
+  author={Velickovic, Petar},
   journal={arXiv preprint arXiv:2202.11097},
   year={2022}
 }
@@ -115,5 +122,13 @@
   year={2019},
   organization={PMLR}
 }
+
+@MISC{dynamicgraphstwitter,
+   author =       {Rossi, Emanuele},
+   title =        {TGN: Temporal Graph Networks for Dynamic Graphs},
+   month =        {January},
+   year =         {2021},
+   url = {https://emanuelerossi.co.uk/assets/pdf/TGN_2021_01_22.pdf},
+ }
 
 
